# layout_generation

./: .gitignore  AStar.cpp  AStar.h  CBS.cpp  CBS.h  CMakeCache.txt  CMakeLists.txt  Makefile  PBS.cpp  PBS.h  PBS_launch.cpp  README.md  agents.cpp  agents.h  arguments_parser.cpp  arguments_parser.h  cmake_install.cmake  common.cpp  common.h  genetic.cpp  genetic.h  graph.cpp  graph.h  layout_generation_launch.cpp  main.cpp  task_assigner.cpp  task_assigner.h  tmp  topsort.cpp  topsort.h
data/: sorting_grid
data/experiments/: best_assignment_18_005  best_assignment_18_03  best_assignment_18_03_10_agents  best_assignment_18_03_3_agents  best_assignment_36_005  best_assignment_36_03  best_assignment_9_005  best_assignment_9_03  best_assignment_tiny_12_005  best_assignment_tiny_12_03  experiments_results.md
data/inputs/: sorting_grid  sorting_grid_full  sorting_grid_small  sorting_grid_small_baseline  sorting_grid_small_baseline_18  sorting_grid_small_baseline_9  sorting_grid_small_full  sorting_grid_tiny_baseline_12  sorting_grid_tiny_full
data/outputs/: sample_output_small
scripts/: generate_grid.py  visualize_path.py
visualization/: sample_output  sample_output_wait_3_sec  visualize_path.py
